2005-03-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi: Replace wicked whiches by thats.

2005-03-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (scan_configure_dep, scan_file): Include file names
	are relative to the directory of configure.ac, not to the
	directory of the file doing the include.  Remove code for this
	latter case.
	* tests/acloca13.test: Run distcheck and make sure all macros are
	actually distributed.

2005-03-03  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/450:
	* aclocal.in (scan_file, scan_configure_dep): Skip missing sincluded
	files.
	* automake.in (scan_autoconf_traces): Likewise.
	* tests/sinclude.test: Augment.
	Report from Peter Breitenlohner.

	For PR automake/450:
	* aclocal.in (write_aclocal, trace_used_macros): Do not add/remove
	acinclude.m4 and configure.ac to the include map in these two
	places ...
	(strip_redundant_includes): ... do it here.  This completes the
	previous change from 2005-03-01, that did not update
	write_aclocal.
	* tests/acloca19.test: Augment.
	Report from Peter Breitenlohner.

2005-03-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/comment9.test: Typo.

2005-03-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (read_am_file): Preserve backslashes preceding ##-lines.
	* tests/comment9.test: New file.
	* tests/Makefile.am (TESTS): Add comment9.test.
	Report from Julien Sopena.

	For PR automake/450:
	* aclocal.in (trace_used_macros): Do not explicitly trace files
	included by configure.ac.
	* tests/acloca19.test: New file.
	* tests/Makefile.am (TESTS): Add acloca19.test.
	Report from Peter Breitenlohner.

2005-02-27  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/448:
	* automake.in (handle_factored_dependencies): Flag install-hook as
	an error.
	* tests/insthook.test: Exercise this.

	* m4/lispdir.m4: Use datarootdir instead of datadir to match GCS.
	* doc/automake.texi (Hard-Coded Install Paths): Adjust.
