@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002, 2003, 2004
+## Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005
 ## Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
@@ -47,8 +47,12 @@ elc-stamp: $(LISP)
 ## by the user (to disable byte-compilation), and POSIX does not allow
 ## an empty target.
 $(am__ELCFILES): elc-stamp
-## Recover from the removal of $@
-	@if test ! -f $@; then \
+## Recover from the removal of $@.
+##
+## Make sure not to call `make elc-stamp' if emacs is not available,
+## because as all *.elc files appear as missing, a parallel make would
+## attempt to build elc-stamp several times.
+	@if test "$(EMACS)" != no && test ! -f $@; then \
 	  rm -f elc-stamp; \
 	  $(MAKE) $(AM_MAKEFLAGS) elc-stamp; \
 	else : ; fi
