@@ -1,3 +1,12 @@
+2005-03-16  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/lisp.am ($(am__ELCFILES)): Do not attempt to recover
+	a missing *.elc file if it cannot be created because emacs does
+	not exist.
+	* tests/lisp7.test: New file.
+	* tests/Makefile.am (TESTS): Add lisp7.test.
+	Report from Greg Schafer.
+
 2005-03-05  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/automake.texi: Replace wicked whiches by thats.
